# ISC-Editor

./: AGENTS.md  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
server/: package.json
server/src/: db.ts  debug.ts  index.ts
sql/world/: 2026_07_14_model_tags.sql
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  debug.rs  lib.rs  liquids.rs  minimap.rs  model_proxy.rs  wmo.rs
src-tauri/src/commands/: access_requirement.rs  addon.rs  batch.rs  conditions.rs  connection.rs  creature.rs  creature_addon.rs  creature_classlevelstats.rs  creature_formations.rs  creature_model_tags.rs  creature_movement_override.rs  creature_onkill_reputation.rs  creature_questitem.rs  creature_text.rs  creature_text_locale.rs  equip.rs  exploration_basexp.rs  game_tele.rs  gameobject_addon.rs  gameobject_loot.rs  gameobject_model_tags.rs  gameobject_overrides.rs  gameobject_questitem.rs  gameobject_spawn.rs  gameobject_template.rs  gameobject_template_addon.rs  gameobject_template_locale.rs  gossip_menu.rs  gossip_menu_option.rs  gossip_menu_option_locale.rs  instance_encounters.rs  instance_spawn_groups.rs  instance_template.rs  item.rs  locale.rs  mod.rs  movement.rs  npc.rs  npc_text.rs  npc_text_locale.rs  (+14 more)
src/components/: ActionsColumn.vue  AppLayout.vue  AppNavbar.vue  AppSidebar.vue  BitmaskField.vue  EditableDataTable.vue  EditorField.vue  EditorHeader.vue  ModuleLayout.vue  SectionTabs.vue  SettingsDialog.vue  SqlDebugViewer.vue  (+3 more)
(+368 files in other folders)
